[gd_scene load_steps=21 format=3 uid="uid://cml1bbbkgy4q3"]

[ext_resource type="Script" path="res://scripts/wood_collectible.gd" id="1_76eot"]
[ext_resource type="Texture2D" uid="uid://hen4cjovuro7" path="res://graphics/Tiny Swords/Resources/Resources/W_Idle_(NoShadow).png" id="2_vood6"]
[ext_resource type="Texture2D" uid="uid://dhm652fdcum20" path="res://graphics/Tiny Swords/Resources/Resources/W_Spawn.png" id="3_4b7m2"]
[ext_resource type="Texture2D" uid="uid://ddyb67jyc1o6l" path="res://graphics/other/New Piskel-1.png (1).png" id="4_yd4pb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5c10w"]
radius = 28.0179

[sub_resource type="AtlasTexture" id="AtlasTexture_o5s1i"]
atlas = ExtResource("2_vood6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjbkk"]
atlas = ExtResource("3_4b7m2")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3il8x"]
atlas = ExtResource("3_4b7m2")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_keajm"]
atlas = ExtResource("3_4b7m2")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mmm7"]
atlas = ExtResource("3_4b7m2")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvbke"]
atlas = ExtResource("3_4b7m2")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fsgy"]
atlas = ExtResource("3_4b7m2")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f7i1"]
atlas = ExtResource("3_4b7m2")
region = Rect2(768, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_tas35"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5s1i")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjbkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3il8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_keajm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mmm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvbke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fsgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f7i1")
}],
"loop": false,
"name": &"spawn",
"speed": 10.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_tqhsr"]
font_size = 26

[sub_resource type="Animation" id="Animation_6i4uv"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(2, 0.5, 2, 0.5, 0.466517),
"update": 0,
"values": [Vector2(0, -24.392), Vector2(0, -21.892), Vector2(0, -19.392), Vector2(0, -21.892), Vector2(0, -24.392)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8pe7t"]
_data = {
"idle": SubResource("Animation_6i4uv")
}

[sub_resource type="Animation" id="Animation_adeii"]
resource_name = "collect_button_hide"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(0.4, 0.4), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ewv7c"]
resource_name = "collect_button_show"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.4, 0.4), Vector2(0.8, 0.8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3sowp"]
_data = {
"collect_button_hide": SubResource("Animation_adeii"),
"collect_button_show": SubResource("Animation_ewv7c")
}

[node name="wood_collectible" type="StaticBody2D"]
script = ExtResource("1_76eot")

[node name="pickArea" type="Area2D" parent="."]
position = Vector2(0, -11.608)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickArea"]
shape = SubResource("CircleShape2D_5c10w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 3
position = Vector2(0, -36)
sprite_frames = SubResource("SpriteFrames_tas35")
animation = &"idle"

[node name="Sprite2D" type="Sprite2D" parent="AnimatedSprite2D"]
self_modulate = Color(1, 1, 1, 0.498039)
z_index = 4
position = Vector2(-16, 3.392)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("4_yd4pb")

[node name="Label" type="Label" parent="AnimatedSprite2D/Sprite2D"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.461
anchor_right = 0.5
anchor_bottom = 0.461
offset_left = -23.5
offset_top = -34.002
offset_right = -8.5
offset_bottom = 1.998
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
text = "E"
label_settings = SubResource("LabelSettings_tqhsr")
metadata/_edit_use_anchors_ = true

[node name="logAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8pe7t")
}

[node name="collect_buttonAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3sowp")
}

[connection signal="body_entered" from="pickArea" to="." method="_on_pick_area_body_entered"]
[connection signal="body_exited" from="pickArea" to="." method="_on_pick_area_body_exited"]
